--- a/petition-site/index.html
+++ b/petition-site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/GDClogo.png" />
+    <link rel="icon" type="image/png" href="/LLEI Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ILP Catalunya - Signa la Petició</title>
   </head>
