--- a/petition-site/index.html
+++ b/petition-site/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script>
+      (function () {
+        try {
+          const stored = localStorage.getItem("theme");
+          const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+          const theme = stored || (prefersDark ? "dark" : "light");
+          document.documentElement.classList.remove("light", "dark");
+          document.documentElement.classList.add(theme);
+        } catch {}
+      })();
+    </script>
     <link rel="icon" type="image/png" href="/LLEI Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ILP Catalunya - Signa la Petició</title>
